[gd_scene load_steps=3 format=3 uid="uid://0e054jf2e71e"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_d4gkw"]
[ext_resource type="PackedScene" uid="uid://cmb1heatou47p" path="res://scenes/level_end_score.tscn" id="2_o87uf"]

[node name="Hud" type="Control"]
z_index = 999
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4gkw")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 108.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="EnemiesIcon" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "E"

[node name="EnemiesLabel" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "12312312312"

[node name="TimeIcon" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "T"

[node name="TimeLabel" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "5:00"

[node name="MoneyIcon" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "G"

[node name="MoneyLabel" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "111112332131"

[node name="LevelEndScore" parent="." instance=ExtResource("2_o87uf")]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -251.0
offset_top = 219.0
offset_right = 250.0
offset_bottom = 727.0
grow_horizontal = 2

[node name="EndTimer" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
